styles/3_components.css
/* NAVIGATION */

#header {
  width: 100%; height: 65px;
  position: relative;
  margin: 0 auto 0 auto;
  /*background-color: rgb(205,255,105);
  box-shadow: rgba(0, 0, 0, 0.15) 0px -20px 70px 40px;*/
  -webkit-transition: ease-in-out .3s;
  -moz-transition: ease-in-out .3s;
  transition: ease-in-out .3s;
  -webkit-font-smoothing: antialiased;
}

#logo {
  margin: 0;
  float: left;
  line-height: 60px;
}
#logo a {
  display: block;
}
#logo img {
  height: 53px;
}

nav, nav ul { height: 65px; }

nav .pos {
  position: relative;
  margin: 0 auto;
  width: 940px;
  height: 100%;
  border-bottom: solid 1px #ccc;
}

nav ul {
  float: right;
  margin: 0; padding: 0;
}

nav ul li {
  float: left;
  margin: 0 0 0 20px;
  list-style: none;
  padding: 0;
  font: bold .8em/65px Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
  text-transform: uppercase;
}

nav ul li.right {
  position: relative;
  float: right;
  margin-left: 20px;
}

#lights-toggle a {
  font-size: 22px;
  display: inline-block;
  vertical-align: middle;
  background: rgba(0,0,0,.7);
  height: 30px;
  line-height: 150%;
  border-radius: 10px;
}
#lights-toggle a:hover {
  text-decoration: none;
  color: #ff9;
  background-color: rgba(255,255,150,.4);
}

nav ul li a,
nav ul li a:visited
{
  color: #000;
  text-decoration: none;
  border: solid 1px #ccc;
  padding: 4px 10px;
  border-radius: 20px;
  letter-spacing: 1px;
  -webkit-font-smoothing: antialiased;
}
nav ul li a:hover {
  text-decoration: none;
  color: white;
  border-color: #8CD600;
  -webkit-transition: ease-in-out border-color .2s;
}

/* VISUAL */
a.caption,
.visual.caption, .visual.caption p, .visual.caption img
{ text-decoration: none; }

.visual.caption {
  display: block;
  overflow: hidden;
}
.visual.caption:hover {
  box-shadow: 0 0 8px 0 black;
}
.visual.caption:hover img, .visual.caption:hover video {
  -webkit-transform: translateY(-15px);
  -moz-transform: translateY(-15px);
  -o-transform: translateY(-15px);
  transform: translateY(-15px);
}
.visual.caption p {
  position: absolute;
  z-index: 999;
  margin: 0;
  padding: 4px 12px;
  width: 100%;
  background-color: #232323;
  color: #FFF;
  font-size: 80%;
  text-decoration: none;
}
.visual.caption:hover p {
  -webkit-transform: translateY(-25px);
  -moz-transform: translateY(-25px);
  -o-transform: translateY(-25px);
  transform: translateY(-25px);
}
.visual.caption, .visual.caption p, .visual.caption img, .visual.caption video {
  -webkit-transition: all .2s ease-out;
  -moz-transition: all .2s ease-out;
  -o-transition: all .2s ease-out;
  transition: all .2s ease-out;
}

/* Icon boxes */
.block-with-icons ul {
  margin-bottom: 0px;
}

.block-with-icons ul li:last-child {
  padding-bottom: 0px;
}

.block-with-icons h2 {
  margin-top: 0px;
}

.block-with-icons .iconList {
  padding: 0;
}

.iconList li {
  overflow: hidden;
  padding: 5px 0 19px 0px;
  list-style-type: none;
}

.iconList li img { float: left; }
.iconList li i {
  vertical-align: middle;
  display: block;
  float: left;
  min-width: 40px;
  text-align: center;
}
.iconList li div { display: inline-block; padding: 4px 0px 0px 9px; }

.iconList.no-text li {
  display: inline-block;
}
.iconList.no-text li div {
  display: none;
  padding: 0;
}
.iconList.no-text a {
  color: inherit !important;
}
.iconList.no-text a:hover {
  color: #88c546 !important;
  text-decoration: none !important;
}

.block-large .intro {
  width: 600px;
  margin: 0 20px 0 0;
  float: left;
}
.block-large .intro .visual { margin-bottom: 15px; }

/* Qers */
#colleagues .block-full {
  overflow: visible;
}

#colleagues ol {
  margin: 0;
  padding: 0;
}

#colleagues ol li {
  width: 108px;
  height: 108px;
  list-style: none;
  float: left;
  position: relative;
  margin: 0px 10px 10px 0;
}

#colleagues ol li.no-results {
  display: block;
  clear: left;
  float: none;
  width: auto; height: auto;
  margin: 0;
  text-align: center;
  padding: 30px 0;
  background-color: #999;
}

#colleagues ol li > .name {
  z-index: 1;
  position: absolute;
  bottom: 3px;
  left: 3px;
  color: black;
  display: inline-block;
  padding: 0 3px;
  line-height: 1.3em;
  font: 18px bebas-neue, "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: white;
  text-shadow: 0 1px 1px black;
  letter-spacing: 1px;
  background-color: #000;
  background-color: rgba(0,0,0,.3);
}

#colleagues ol li > .contactData {
  display: none;
}

#colleagues ol li > img {
  position: absolute; top: 0px; left: 0px;
  width: 108px; height: 108px;
}

#colleagues ol li .polaroid {
  position: absolute;
  top: -88px;
  background-color: #fff;
  z-index: 9;
  padding: 10px;
  -webkit-box-shadow: 0px 4px 13px rgba(0,0,0,0.4);
  -moz-box-shadow: 0px 4px 13px rgba(0,0,0,0.4);
  box-shadow: 0px 4px 13px rgba(0,0,0,0.4);
}

.polaroid img {
  width: 150px; height: 150px;
}

#colleagues ol .hover { overflow: visible;  }
#colleagues ol .polaroid {
  opacity: 0;
  margin: 42px 0px 0px -33px;
  left: -3000px;
  width: 174px;
  -webkit-transform: rotate(0deg) translate3d(0,0,0);
  -webkit-transform: scale(0.71) translate3d(0,0,0);
  -webkit-transition-property: opacity, margin, -webkit-transform, left;
  -webkit-transition-duration: .05s, .05s, .05s, 0s;
  -webkit-transition-timing-function: linear, linear, linear, linear;
  -webkit-transition-delay: 0s, 0s, 0s, 3.05s;
  -moz-transform: rotate(0deg);
  -moz-transform: scale(0.71);
  -moz-transition-property: opacity, margin, -moz-transform, left;
  -moz-transition-duration: .05s, .05s, .05s, 0s;
  -moz-transition-timing-function: linear, linear, linear, linear;
  -moz-transition-delay: 0s, 0s, 0s, 3.05s;
}
/* ... */

